# spock.cu

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cu  main.py  pyproject.toml  scenario-tree.eps  setup.py  test.py  toBeDeleted.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/python/: README.md  pyproject.toml
api/python/spock/: __init__.py  build.py  jinja2.py  meta.py  model.py  problem.py  tree.py
ci/: README.md  script.sh
docs/: software_uml.md
examples/: README.md
examples/admmServerAC/: CMakeLists.txt  main.cu  main.py  time.csv  time.sh
examples/andersonBuffer/: CMakeLists.txt  main.cu  main.py  time.csv  time.sh
examples/networkComm/: CMakeLists.txt  main.py
examples/networkedControl/: CMakeLists.txt  beta_tree.tex  main.cu  main.py  time.sh
examples/powerDistribution/: CMakeLists.txt  main.cu  main.py  problem.py  time.csv  time.sh  tree.py  watch.sh
examples/powerDistribution/deEnergyData/: demandActual24.csv  demandForecast.csv  demandForecast25.csv  priceActual24.csv  priceForecast24.csv  priceForecast25.csv  renewablesActual24.csv  renewablesForecast.csv  renewablesForecast25.csv
examples/powerDistribution/deEnergyData/arimaModels/: README.md  modelMeans.csv  priceArimaModel.ipynb  priceArimaModel.py  priceData2019To2024.csv  requirements.txt
examples/powerDistribution/niEnergyData/: data_scraper.py  wind_generation_and_forecast_2025.csv  wind_generation_and_forecast_jan25.csv
examples/precondition/: CMakeLists.txt  main.cu  main.py  run.sh
examples/random/: CMakeLists.txt  main.cu  main.py  time.csv  time.sh
examples/serverAirCondition/: CMakeLists.txt  main.cu  main.py  time.sh
examples/watchdog/: memory.sh
factories/: build.py  model.py  problem.py  tree.py
include/: CublasContext.cuh  DeviceVector.cuh  cuContext.cuh  gpu.cuh  stdgpu.h
json/: README.md  errorCache.json  errorPlotter.m  timeScaling.csv  timeScalingBackup.csv
misc/: cacheCp.json  cacheSp.json  plotTimeScaling.m  sp.json  time.sh  timeScaling.csv  timeScaling.sh  timeScaling_d512.csv  timeScaling_f128.csv  timeScaling_f512.csv
misc/results_binary/: backup.csv  cpu.csv  gpu.csv
misc/results_binary_tree/: timeScaling_d1024.csv  timeScaling_d32.csv  timeScaling_d512.csv  timeScaling_f1024.csv  timeScaling_f32.csv
misc/results_converge/: e10_n10_b2.json  oscillation.json
misc/results_cp_vs_admm/: admm_d_512.csv  cp_d_512.csv
misc/results_random/: backup_smallQR.csv  output.json  time.csv
misc/results_server/: time.csv
misc/results_ternary/: backup.csv  cpu.csv  gpu.csv
misc/results_ternary_stopped/: backup.csv  mosek.csv  spock.csv
playground/: play.cu  test0.cpp  tree_class_example.cu
py/: __init__.py  build.py  builderClasses.py  cacheTemplate.json.jinja2  data.json.jinja2  modelFactory.py  problemFactory.py  problemTemplate.json.jinja2  problem_factories.py  treeFactory.py  treeTemplate.json.jinja2  tree_attributes.h.jinja2  tree_data.json.jinja2  tree_factories.py
src/: CMakeLists.txt  cache.cuh  cones.cuh  constraints.cuh  costs.cuh  cp.cuh  cuda_memory.cuh  definitions.cu  device_array.cuh  dynamics.cuh  gpt_tree.cpp  main.py  memCpy.cuh  operator.cuh  problem.cuh  projections.cuh  risks.cuh  scenario_tree.cpp  scenario_tree.py  spock.cuh  tree.cuh  tree.h  tree.h.jinja2  tree_attributes.h  tree_data.json  wrappers.cuh  wrappers.h
tests/: .gitkeep  CMakeLists.txt  DELETE_test_tree_main.py  default_problem_data.json  default_tree_data.json  empty.cpp  problem_data.json  setup.py  test.py  testCache.cu  testCones.cu  testKernels.cu  testMemCpy.cu  testOperator.cu  testProblem.cu  testProblemData.json  testProblemFactory.py  testProjections.cu  testRisks.cu  testTree.cu  testTreeData.json  testTreeFactory.py  test_cache.cu  test_cones.cu  test_cuda_memory.cu  test_device_array.cu  test_functions.cu  test_gpu.cu  test_mat_mul.cc  test_mat_mul.cu  test_mat_mul.cuh  test_mat_mul.h  test_problem.cu  test_risks.cu  test_stdgpu.cu  test_tree.cc  test_tree.cu  test_tree_factories.py  test_tree_main.py  test_wrappers.cu  (+3 more)
tests/cuda/: test.py  testCache.cu  testCones.cu  testKernels.cu  testOperator.cu  testProblem.cu  testProjections.cu  testRisks.cu  testTree.cu
tests/julia/: README.md  help.jl  julia.jl  test.jl
tests/julia/modelFactory/: Project.toml
tests/julia/modelFactory/src/: modelFactory.jl
tests/python/: testProblemFactory.py  testTreeFactory.py
