[project]
name = "spock"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Ruairi Moran", email = "rmoran05@qub.ac.uk"},
    {name = "Pantelis Sopasakis", email = "p.sopasakis@qub.ac.uk"},
]
description = "API for SPOCK: a solver for multistage risk-averse optimal control problems"
keywords=['risk averse, optimal control, parallel']
requires-python = ">=3.8"
classifiers = [
    "Programming Languages :: Python :: C++ :: CUDA",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy<2',
    'scipy',
    'matplotlib',
    'jinja2',
    'gputils_api'
]

[project.optional-dependencies]
draw = [
    'PythonTurtle',
]
test = [
    'cvxpy',
    'gurobipy'
]

[project.urls]
Repository = "https://github.com/ruairimoran/raocp-parallel"
Issues = "https://github.com/ruairimoran/raocp-parallel/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
