add_executable(network)
target_sources(network
    PRIVATE
    main.cu
)
target_link_libraries(network
    PRIVATE
    spock_compiler_flags
    spock_src
    cublas
    cusolver
    cudadevrt
)
target_include_directories(network
    PRIVATE
    "${GPUTILS_SOURCE_DIR}/include"  # includes GPUtils directory
    "${PROJECT_SOURCE_DIR}/src"
    "${PROJECT_BINARY_DIR}"
)