add_executable(precondition)
target_sources(precondition
    PRIVATE
    main.cu
)
target_link_libraries(precondition
    PRIVATE
    spock_compiler_flags
    spock_src
    cublas
    cusolver
    cudadevrt
)
target_include_directories(precondition
    PRIVATE
    "${GPUTILS_SOURCE_DIR}/include"  # includes GPUtils directory
    "${PROJECT_SOURCE_DIR}/src"
    "${PROJECT_BINARY_DIR}"
)