add_executable(server)
target_sources(server
    PRIVATE
    main.cu
)
target_link_libraries(server
    PRIVATE
    spock_compiler_flags
    spock_src
    cublas
    cusolver
    cudadevrt
)
target_include_directories(server
    PRIVATE
    "${GPUTILS_SOURCE_DIR}/include"  # includes GPUtils directory
    "${PROJECT_SOURCE_DIR}/src"
    "${PROJECT_BINARY_DIR}"
)